--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 /node_modules
 
-12_spred-rest.html
-12_spred-rest.js
+13_template-literals.html
+13_template-literals.js
+
+04_array-methods.html
+04_array-methods.js
