added practical tasks

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,18 @@
 
 18_oop_agregation&composition.html
 18_oop_agregation&composition.js
+
+19_callback.html
+19_callback.js
+
+20_closure.html
+20_closure.js 
+
+21_promise.html
+21_promise.js
+
+22_async-await.html
+22_async-await.js
+
+23_exceptions_try-catch.html
+23_exceptions_try-catch.js
