--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /node_modules
+/own_folder
 
 04_array-methods.html
 04_array-methods.js
+
+04_associative_array.html
+04_associative_array.js
 
 15_oop_get-set.html
 15_oop_get-set.js
