--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
 /node_modules
 /own_folder
 
-04_associative_array.js
+28_button_simple.html
+28_button_simple.css
+
+29_shadows_applying.html
+29_shadows_applying.css
+
+29_shadows_transparent.html
+29_shadows_transparent.css
+29_shadows_fireball.png
+
+30_text_overflow.html
+30_text_overflow.css
+
+31_svg_icons.html
+31_svg_icons.css
