added changes in destructuring file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
 /node_modules
 /own_folder
 
+32_axios.html
+32_axios.js
+
+33_css_selectors.html
+33_css_selectors.css
+
+34_css_pseudo_selectors.html
+34_css_pseudo_selectors.css
+
+35_css_list_styling.html
+35_css_list_styling.css
+
+36_css_position.html
+36_css_position.css
